fix: letter-spacing in timer

--- a/audio-player/style.css
+++ b/audio-player/style.css
@@ -241,6 +241,7 @@ h1 {
   height: 28px;
   padding: 0 6px;
   color: #ffffff;
+  letter-spacing: 1.2px;
   background-color: #520000;
 }
 
